k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-monitor
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crypto-monitor
  template:
    metadata:
      labels:
        app: crypto-monitor
    spec:
      containers:
        - name: crypto-monitor
          image: ghcr.io/YOUR_USERNAME/crypto-monitor:latest # TODO: Update with your registry/username
          ports:
            - containerPort: 3000
